[FIX] website: fix invisible parallax snippet issue
When the height not forced (50% or 100% screen's height), the snippet
simply disappear if there is no content inside (default).

The 4e220bf commit makes parallax snippet empty by default and the
main goal of a8f0cee was to make "DRAG BUILDING BLOCK HERE" placeholders
appear only on drag, that's why we need to add a "min-height" for parallax
to keep it visible when the "Height" selected is auto.

task-2327025

closes odoo/odoo#57075

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -693,6 +693,10 @@ table.table_desc tr td {
         }
     }
 }
+// Keeps parallax snippet element selectable when Height = auto.
+.s_parallax {
+    min-height: 10px;
+}
 
 //
 // Layout
